--- a/product.html
+++ b/product.html
@@ -10,13 +10,14 @@
 <body>
   <div id="product-info">
     <h1 id="product-name"></h1>
+    <p id="product-relese-date" style="font-size: large;"></p>
     <div id="product-image">
         <img src="" alt="">
         <div id="photobox-container"class="photobox-container">
     </div></div>
     
     <p id="product-description"></p>
-    <p id="product-relese-date"></p>
+    
   </div>
 
   <div class="copybox-continer" id="specs-copybox-continer">
